--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-twitter_username:   huxpro
+weibo_username:     Veronica
+zhihu_username:     Veronica
+github_username:    Veronica
+twitter_username:   Veronica
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
@@ -59,7 +59,7 @@ kramdown:
 
 
 # Disqus settings
-disqus_username: hux
+disqus_username: Veronica
 
 # Netease settings
 netease_comment: false
